# qt_videocam_hough

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
cvmat2qimage/: CMakeLists.txt
cvmat2qimage/include/: cvmat2qimage.hpp
cvmat2qimage/src/: cvmat2qimage.cpp
hough/: CMakeLists.txt
hough/include/: hough.hpp
hough/src/: hough.cpp
houghparameter/: CMakeLists.txt
houghparameter/include/: houghparams.hpp
opencv_video_hough_test/: CMakeLists.txt
opencv_video_hough_test/src/: main.cpp
qt_opencv_tool/: CMakeLists.txt
qt_opencv_tool/include/: hough_param_window.hpp  mainwindow.hpp
qt_opencv_tool/src/: hough_param_window.cpp  hough_param_window.ui  hough_param_window2.ui  main.cpp  mainwindow.cpp  mainwindow.ui
timemeasurement/: CMakeLists.txt
timemeasurement/include/: timemeasurement.h
timemeasurement/src/: timemeasurement.cpp
video_cam/: CMakeLists.txt
video_cam/include/: video_cam.hpp
video_cam/src/: video_cam.cpp  videocam_searcher.c
video_file_hdl/: CMakeLists.txt
video_file_hdl/include/: video_file_hdl.hpp
video_file_hdl/src/: video_file_hdl.cpp
